--- a/Decisao/ex3/.vscode/launch.json
+++ b/Decisao/ex3/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/DotNet.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/ex3.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "externalTerminal",
